After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767792 - h264parse: fix default time_offset_length
h264parse: fix default time_offset_length
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.8.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-06-17 14:11 UTC by Michael Olbrich
Modified: 2016-06-27 06:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
h264parse: fix default time_offset_length (974 bytes, patch)
2016-06-17 14:11 UTC, Michael Olbrich
committed Details | Review

Description Michael Olbrich 2016-06-17 14:11:24 UTC
Created attachment 329960 [details] [review]
h264parse: fix default time_offset_length

The default value for time_offset_length should be 24.
At least that's what ffmpeg is using.

I have no idea where this value comes from. I just copied it from ffmpeg (libavcodec/h264_ps.c ff_h264_decode_seq_parameter_set()) and it fixes parsing my test video.
Comment 1 Aurélien Zanelli 2016-06-17 14:21:28 UTC
(In reply to Michael Olbrich from comment #0)
> I have no idea where this value comes from. I just copied it from ffmpeg
> (libavcodec/h264_ps.c ff_h264_decode_seq_parameter_set()) and it fixes
> parsing my test video.

Value is coming from the H.264 specification (E2.2):

"When the time_offset_length syntax element is not present, it shall be inferred to be equal to 24."

So it's a good default value :)
Comment 2 Sebastian Dröge (slomo) 2016-06-21 07:46:12 UTC
Attachment 329960 [details] pushed as 378051d - h264parse: fix default time_offset_length